<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dumps">

    <fragment
        android:id="@+id/navigation_dumps"
        android:name="com.mirzi.binme.ui.dumps.DumpsFragment"
        android:label="@string/title_dumps"
        tools:layout="@layout/fragment_dumps" />

    <fragment
        android:id="@+id/navigation_bins"
        android:name="com.mirzi.binme.ui.bins.BinsFragment"
        android:label="@string/title_bins"
        tools:layout="@layout/fragment_bins" />

    <fragment
        android:id="@+id/navigation_mainmenu"
        android:name="com.mirzi.binme.ui.mainmenu.MainMenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_mainmenu" />
</navigation>