<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:gravity="bottom"
            android:padding="@dimen/padding_sm"
            android:text="@string/register_title"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="@dimen/padding_sm"
            android:hint="@string/login_nick"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/registerPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="@dimen/padding_sm"
            android:hint="@string/login_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_margin="@dimen/padding_sm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            app:shapeAppearanceOverlay="@style/PillShape"
            android:text="@string/register_btn" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:padding="@dimen/padding_sm"
                    android:text="@string/register_requirements_nick"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_sm"
                    android:text="@string/register_requirements_nick_txt" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:padding="@dimen/padding_sm"
                    android:text="@string/register_requirements_pass"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_sm"
                    android:text="@string/register_requirements_pass_txt" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="@dimen/actionbar_height"
        android:layout_height="@dimen/actionbar_height"
        android:background="@drawable/navigation_background"
        android:elevation="4dp"
        android:layout_margin="@dimen/padding_sm"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="back"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>