<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bins.BinsFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map_bins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="48.308232"
        mapbox:mapbox_cameraTargetLng="18.091302"
        mapbox:mapbox_cameraZoom="14.0">

    </com.mapbox.mapboxsdk.maps.MapView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/binmap_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        app:tint="@color/white"
        android:src="@drawable/ic_baseline_add_24"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/binmap_typesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="@dimen/padding_sm"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/binmap_filter_selector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/navigation_background"
        android:elevation="4dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/home_view_margin_top"
        android:layout_marginBottom="@dimen/home_view_margin_bottom"
        android:layout_marginStart="@dimen/padding_sm"
        android:layout_marginEnd="@dimen/padding_sm"
        android:orientation="vertical"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="@+id/map_bins">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_1"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_2"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_4"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_8"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_16"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_32"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch64"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_64"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/filter_switch128"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_lg"
                    android:text="@string/bin_type_128"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/binmap_apply_filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearanceOverlay="@style/PillShape"
            android:text="@string/filter_confirm"
            android:layout_margin="@dimen/padding_lg"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>