<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:gravity="bottom"
            android:padding="@dimen/padding_sm"
            android:text="@string/login_title"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="@dimen/padding_sm"
            android:hint="@string/login_nick"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="@dimen/padding_sm"
            android:hint="@string/login_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:layout_margin="@dimen/padding_sm"
            app:shapeAppearanceOverlay="@style/PillShape"
            android:text="@string/login_btn" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="@dimen/actionbar_height"
        android:layout_height="@dimen/actionbar_height"
        android:background="@drawable/navigation_background"
        android:elevation="4dp"
        android:layout_margin="@dimen/padding_sm"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="back"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>