<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDumpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/add_button_padding"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:gravity="bottom"
                android:padding="@dimen/padding_sm"
                android:text="@string/add_dump"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_sm"
                android:layout_weight="1"
                android:text="@string/description"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_dump_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_sm"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:maxLength="1000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_sm"
                android:layout_weight="1"
                android:text="@string/photo"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_sm"
                    app:icon="@drawable/ic_baseline_camera_alt_24"
                    android:onClick="openCameraIntent"
                    app:iconGravity="textStart"
                    android:text="@string/take_photo"
                    android:layout_weight="1"
                    app:shapeAppearanceOverlay="@style/PillShape" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_sm"
                    android:onClick="openImagePicker"
                    android:text="@string/select_image"
                    app:icon="@drawable/ic_baseline_insert_photo_24"
                    app:iconGravity="textStart"
                    android:layout_weight="1"
                    app:shapeAppearanceOverlay="@style/PillShape" />
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/add_dump_img_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                android:elevation="4dp"
                android:layout_margin="@dimen/padding_lg"
                android:layout_weight="1" />

            <!--Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" /-->

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="@dimen/actionbar_height"
        android:layout_height="@dimen/actionbar_height"
        android:background="@drawable/navigation_background"
        android:elevation="4dp"
        android:layout_margin="@dimen/padding_sm"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="back"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/add_dump_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_sm"
        android:onClick="addDump"
        android:text="@string/add_dump"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/PillShape"
        tools:layout_editor_absoluteX="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>